Imports header data path fix

--- a/src/patterns/__environment__/50-organisms/header.hbs
+++ b/src/patterns/__environment__/50-organisms/header.hbs
@@ -1,5 +1,5 @@
 
-<header class="header{{#if ../classes}} {{../classes}}{{/if}}">
+<header class="header{{#if classes}} {{classes}}{{/if}}">
 {{#with header}}
 
   <div class="notifications">
